# adaptive-thresholding

./: .gitignore  CMakeLists.txt  README.md  app.py  run.py
data/: data_generator.py  evaluate_processed_data.py  generate_augmented_paths.py
experiments/: check_thresholds.py
src/: adaptive_thresholding.cpp  adaptive_thresholding.h  app.cpp  app.h  main.cpp  main_base.cpp  main_base.h  mean_adaptive_thresholding.cpp  mean_adaptive_thresholding.h
